--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   hello netlify
 
-  <form name="contact" method="POST" netlify>
+  <form name="contact" method="POST" action="/thank.html" netlify>
     <p>
       <label>Your Name: <input type="text" name="name" /></label>   
     </p>
