--- a/html/input-jquery/confirm.html
+++ b/html/input-jquery/confirm.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
   <title>netlify-sample</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css">
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../../css/style.css">
   <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
  
 </head>
@@ -44,6 +44,6 @@
       </p>
     </section>
 
-    <script src="../js/next-end.js"></script>
+    <script src="../../js/next-end.js"></script>
 </body>
 </html>
