--- a/index.html
+++ b/index.html
@@ -26,10 +26,14 @@
   
   <div class="text columns">
     <div class="column is-one-third">
-        <a href="/html/input.html" class="button is-primary is-outlined">登録</a>
+      <a href="/html/input-cloud/input.html" class="button is-primary is-outlined">登録(cloud)</a>
     </div>
-    <div class="column">Auto</div>
-    <div class="column">Auto</div>
+    <div class="column">
+      <a href="/html/input-netlify/input.html" class="button is-primary is-outlined">登録(netlify)</a>
+    </div>
+    <div class="column">
+      <a href="/html/input-jquery/input.html" class="button is-primary is-outlined">登録(jquery)</a>
+    </div>
   </div>
 
   
