--- a/html/input-cloud/input.html
+++ b/html/input-cloud/input.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>netlify-sample</title>
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css" rel="stylesheet">
-	<link href="../css/style.css" rel="stylesheet">
+	<link href="../../css/style.css" rel="stylesheet">
 	<script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js">
 	</script>
 </head>
@@ -45,7 +45,7 @@
 			</div>
 		</div><button id="button-confirm">確認</button>
 	</section>
-	<script src="../js/next.js">
+	<script src="../../js/next.js">
 	</script>
 </body>
 </html>
