--- a/html/input-netlify/input.html
+++ b/html/input-netlify/input.html
@@ -10,42 +10,43 @@
 </head>
 
 <body>
-	<section class="text text-h">
-		<div class="field">
-			<label class="label">Your Name:</label>
-			<div class="control">
-				<input class="input" id="name" placeholder="Text input" type="text" required>
-			</div>
-		</div>
-		<div class="field">
-			<label class="label">Your Email:</label>
-			<div class="control">
-				<input class="input" id="email" name="email" placeholder="Email input" required type="email">
-			</div>
-		</div>
-		<div class="field">
-			<label class="label">Your Role:</label>
-			<div class="control">
-				<div class="select">
-					<select id="role">
-						<option value="leader">
-							Leader
-						</option>
-						<option value="follower">
-							Follower
-						</option>
-					</select>
+		<section class="text text-h">
+				<div class="field">
+					<label class="label">Your Name:</label>
+					<div class="control">
+						<input class="input" id="name" placeholder="Text input" type="text" required>
+					</div>
 				</div>
-			</div>
-		</div>
-		<div class="field">
-			<label class="label">Message:</label>
-			<div class="control">
-				<textarea class="message area" id="message" placeholder="please write to the message"></textarea>
-			</div>
-		</div><button id="button-confirm">確認</button>
-	</section>
-	<script src="../../js/next.js">
+				<div class="field">
+					<label class="label">Your Email:</label>
+					<div class="control">
+						<input class="input" id="email" name="email" placeholder="Email input" required type="email">
+					</div>
+				</div>
+				<div class="field">
+					<label class="label">Your Role:</label>
+					<div class="control">
+						<div class="select">
+							<select id="role">
+								<option value="leader">
+									Leader
+								</option>
+								<option value="follower">
+									Follower
+								</option>
+							</select>
+						</div>
+					</div>
+				</div>
+				<div class="field">
+					<label class="label">Message:</label>
+					<div class="control">
+						<textarea class="message area" id="message" placeholder="please write to the message"></textarea>
+					</div>
+				</div>
+				<div class="button is-primary" id="button-confirm">確認</div>
+			</section>
+	<script src="../../js/input-netlify/next.js">
 	</script>
 </body>
 </html>
