--- a/html/input-netlify/confirm.html
+++ b/html/input-netlify/confirm.html
@@ -31,7 +31,7 @@
 </head>
 
 <body>
-  <form class="text text-h" name="contact" method="POST" action="./thank.html" data-netlify="true">
+  <form class="text text-h" name="contact" method="POST" action="/html/input-netlify/thank.html" netlify>
     <div class="field">
       <label class="label">Your Name:</label>
       <input id="name" name="name" class="control" />
@@ -54,7 +54,7 @@
 
     <br />
     <p>
-      <div class="button is-primary" id="button-end">完了</div>
+      <button class="button is-primary" type="submit">完了</button>
     </p>
     <br />
     <p>
