--- a/html/input-netlify/confirm.html
+++ b/html/input-netlify/confirm.html
@@ -33,23 +33,25 @@
 <body>
   <form class="text text-h" name="contact" method="POST" action="/html/input-netlify/thank.html" netlify>
     <div class="field">
-      <label class="label">Your Name:</label>
-      <input id="name" name="name" class="control" />
+      <label class="label">Your Name:
+      <input id="name" name="name" type="text" class="control" />
+    </label>
     </div>
 
     <div class="field">
-      <label class="label">Your Email:</label>
-      <input id="email" name="email" class="control" />
+      <label class="label">Your Email:
+      <input id="email" name="email" type="email" class="control" />
+    </label>
     </div>
 
     <div class="field">
-      <label class="label">Your Role: </label>
-      <input id="role" name="role" class="control" />
+      <label class="label">Your Role: 
+      <input id="role" name="role" class="control" /></label>
     </div>
 
     <div class="field">
-      <label class="label">Message: </label>
-      <input id="message" name="message" class="control"/>
+      <label class="label">Message: 
+      <input id="message" name="message" class="control"/></label>
     </div>
 
     <br />
