--- a/html/input-netlify/confirm.html
+++ b/html/input-netlify/confirm.html
@@ -33,25 +33,20 @@
 <body>
   <form class="text text-h" name="contact" method="POST" action="/html/input-netlify/thank.html" netlify>
     <div class="field">
-      <label class="label">Your Name:
-      <input id="name" name="name" type="text" class="control" />
+      <label>Your Name: <input id="name" type="text" name="name" /></label>
     </label>
     </div>
 
     <div class="field">
-      <label class="label">Your Email:
-      <input id="email" name="email" type="email" class="control" />
-    </label>
+      <label>Your Email: <input id="email" type="email" name="email" /></label>
     </div>
 
     <div class="field">
-      <label class="label">Your Role: 
-      <input id="role" name="role" class="control" /></label>
+      <label>Your Role:  <input id="role" name="role"></label>
     </div>
 
     <div class="field">
-      <label class="label">Message: 
-      <input id="message" name="message" class="control"/></label>
+      <label>Message: <input id="message" name="message" ></input></label>
     </div>
 
     <br />
