確認画面なし

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <a href="/html/input-netlify/input.html" class="button is-primary is-outlined">登録(netlify)</a>
     </div>
     <div class="column">
-      <a href="/html/input-jquery/input.html" class="button is-primary is-outlined">登録(jquery)</a>
+      <a href="/html/input-not-confirm/input.html" class="button is-primary is-outlined">登録(not-confirm)</a>
     </div>
   </div>
 
