--- a/html/input-not-confirm/input.html
+++ b/html/input-not-confirm/input.html
@@ -10,12 +10,12 @@
 </head>
 
 <body>
-<form class="text text-h" name="contact" method="POST" netlify>
+<form class="text text-h" name="contact" method="POST" action="/html/input-not-confirm/thank.html" netlify>
 		<p>
-			<label>Your Name: <input type="text" name="name"  action="/html/input-not-confirm/thank.html"/></label>
+			<label>Your Name: <input type="text" name="name"/></label>
 		</p>
 		<p>
-			<label>Your Email: <input type="email" name="email" /></label>
+			<label>Your Email: <input type="email" name="email"/></label>
 		</p>
 		<p>
 			<label>Your Role: <select name="role[]" multiple>
