--- a/html/input-netlify/confirm.html
+++ b/html/input-netlify/confirm.html
@@ -50,7 +50,7 @@
 
     <br />
     <p>
-      <button class="button is-primary" type="submit">完了</button>
+      <button class="button is-primary" type="submit" id="button-next">完了</button>
     </p>
     <br />
     <p>
