--- a/html/input-netlify/confirm.html
+++ b/html/input-netlify/confirm.html
@@ -33,19 +33,23 @@
 <body>
   <form class="text text-h" name="contact" method="POST" action="/html/input-netlify/thank.html" netlify>
     <p>
-      <label>Your Name: <input id="name" type="text" name="name" /></label>
+      <label class="label">Your Name: </label>
+      <input id="name" type="text" name="name" />
     </p>
 
     <p>
-      <label>Your Email: <input id="email" type="email" name="email" /></label>
+      <label class="label">Your Email: </label>
+      <input id="email" type="email" name="email" />
     </p>
 
     <p>
-      <label>Your Role:  <input id="role" name="role"></label>
+      <label class="label">Your Role: </label>
+      <input id="role" name="role">
     </p>
 
     <p>
-      <label>Message: <input id="message" name="message" ></input></label>
+      <label class="label">Message: </label>
+      <input id="message" name="message" ></input>
     </p>
 
     <br />
