--- a/html/input-netlify/confirm-s.html
+++ b/html/input-netlify/confirm-s.html
@@ -17,7 +17,7 @@
     とりあえずHTMLざっくり組んでみました。<br>
     デザインはまだ未定。</p>
   </div>
-  <form class="text text-h" name="contact" method="POST" action="/html/input-netlify/thank.html" netlify>
+  <form class="text text-h" name="contact-s" method="POST" action="/html/input-netlify/thank.html" netlify>
     <dl class="mailform">
       <dt>参加者氏名</dt>
       <dd>
