--- a/html/input-netlify/confirm-s.html
+++ b/html/input-netlify/confirm-s.html
@@ -19,14 +19,14 @@
   </div>
   <form class="text text-h" name="contact-s" method="POST" action="/html/input-netlify/thank.html" netlify>
     <dl class="mailform">
-      <dt>参加者氏名</dt>
+      <dt>参加者氏名<span class="icon_must">必須</span></dt>
       <dd>
         <div class="mf_rows">
           <div class="mf_col5">
-            <input type="text" name="姓" required="required" id="name1">山田</input>
+            <input type="text" name="姓" required="required" placeholder="山田" id="name1">
           </div>
           <div class="mf_col5">
-            <input type="text" name="名" required="required" id="name2">太郎</input>
+            <input type="text" name="名" required="required" placeholder="太郎" id="name2">
           </div>
         </div>
       </dd>
@@ -95,8 +95,70 @@
       <dt>住所<span class="icon_must">必須</span></dt>
       <dd class="mf_address">
         <div class="select_arrow">
-          <label class="label">Your Email: </label>
-          <input id="email" type="email" name="email">東京都</input>
+          <select name="都道府県" required="required">
+            <option value="" selected="selected">選択して下さい</option>
+            <optgroup label="北海道・東北地方">
+              <option value="北海道">北海道</option>
+              <option value="青森県">青森県</option>
+              <option value="岩手県">岩手県</option>
+              <option value="秋田県">秋田県</option>
+              <option value="宮城県">宮城県</option>
+              <option value="山形県">山形県</option>
+              <option value="福島県">福島県</option>
+            </optgroup>
+            <optgroup label="関東地方">
+              <option value="栃木県">栃木県</option>
+              <option value="群馬県">群馬県</option>
+              <option value="茨城県">茨城県</option>
+              <option value="埼玉県">埼玉県</option>
+              <option value="東京都">東京都</option>
+              <option value="千葉県">千葉県</option>
+              <option value="神奈川県">神奈川県</option>
+            </optgroup>
+            <optgroup label="中部地方">
+              <option value="山梨県">山梨県</option>
+              <option value="長野県">長野県</option>
+              <option value="新潟県">新潟県</option>
+              <option value="富山県">富山県</option>
+              <option value="石川県">石川県</option>
+              <option value="福井県">福井県</option>
+              <option value="静岡県">静岡県</option>
+              <option value="岐阜県">岐阜県</option>
+              <option value="愛知県">愛知県</option>
+            </optgroup>
+            <optgroup label="近畿地方">
+              <option value="三重県">三重県</option>
+              <option value="滋賀県">滋賀県</option>
+              <option value="京都府">京都府</option>
+              <option value="大阪府">大阪府</option>
+              <option value="兵庫県">兵庫県</option>
+              <option value="奈良県">奈良県</option>
+              <option value="和歌山県">和歌山県</option>
+            </optgroup>
+            <optgroup label="四国地方">
+              <option value="徳島県">徳島県</option>
+              <option value="香川県">香川県</option>
+              <option value="愛媛県">愛媛県</option>
+              <option value="高知県">高知県</option>
+            </optgroup>
+            <optgroup label="中国地方">
+              <option value="鳥取県">鳥取県</option>
+              <option value="島根県">島根県</option>
+              <option value="岡山県">岡山県</option>
+              <option value="広島県">広島県</option>
+              <option value="山口県">山口県</option>
+            </optgroup>
+            <optgroup label="九州・沖縄地方">
+              <option value="福岡県">福岡県</option>
+              <option value="佐賀県">佐賀県</option>
+              <option value="長崎県">長崎県</option>
+              <option value="大分県">大分県</option>
+              <option value="熊本県">熊本県</option>
+              <option value="宮崎県">宮崎県</option>
+              <option value="鹿児島県">鹿児島県</option>
+              <option value="沖縄県">沖縄県</option>
+            </optgroup>
+          </select>
         </div>
         <input type="text" name="市区町村" placeholder="市区町村" required="required">
         <input type="text" name="丁目番地" placeholder="丁目番地" required="required">
@@ -138,42 +200,14 @@
       </dd>
     </dl>
     <div class="mf_confirm">
-      <button type="submit" class="button_mfconfirm">確認画面へ</button>
+      <button id="button-confirm" type="submit" class="button_mfconfirm">確認画面へ</button>
     </div>
-  </main>
     <div class="mf_confirm">
-      <button type="submit" class="button_mfconfirm button_mfconfirm_disable">確認画面へ</button>
+      <button id="button-confirm" type="submit" class="button_mfconfirm button_mfconfirm_disable">確認画面へ</button>
     </div>
   </form>
 
-  <style>
-      .label {
-        display: block;
-        position: relative;
-      }
-      .label::before,
-      .label::after {
-        content: "";
-        position: absolute;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        width: 40%;
-        border-bottom: 1px solid #333;
-      }
-      .label::after {
-        bottom: -5px;
-      }
-      input[type="text"],
-      input[type="email"],
-      input[type="tel"],
-      input[type="number"],
-      input[type="date"],
-      textarea {
-        border: none;
-      }
-    </style>
     </head>
-  <!-- <script src="../../js/input-netlify/next-end.js"></script> -->
+  <script src="../../js/input-netlify/next-s-end.js"></script> -->
 </body>
 </html>
