--- a/html/input-netlify/input-s.html
+++ b/html/input-netlify/input-s.html
@@ -209,6 +209,7 @@
   <footer>
     <p>フッターです</p>
   </footer>
-  <script src="../../js/input-netlify/next-s.js"></script>
+  <script src="../../js/input-netlify/next-jquery.js"></script>
+  <!-- <script src="../../js/input-netlify/next-s.js"></script> -->
 </body>
 </html>
