--- a/index.html
+++ b/index.html
@@ -24,12 +24,15 @@
     </div>
   </section>
   
-  <div class="text columns">
-    <div class="column is-one-third">
+  <div class="text columns is-mobile">
+    <div class="column">
       <a href="/html/input-cloud/input.html" class="button is-primary is-outlined">登録(cloud)</a>
     </div>
     <div class="column">
       <a href="/html/input-netlify/input.html" class="button is-primary is-outlined">登録(netlify)</a>
+    </div>
+    <div class="column">
+      <a href="/html/input-netlify/input-s.html" class="button is-primary is-outlined">登録(netlify-s)</a>
     </div>
     <div class="column">
       <a href="/html/input-not-confirm/input.html" class="button is-primary is-outlined">登録(not-confirm)</a>
