--- a/html/input-netlify/input-s.html
+++ b/html/input-netlify/input-s.html
@@ -12,7 +12,7 @@
     <div class="mf_lead">
       <h1>tomato 2020 参加応募フォーム</h1>
       <p>一般参加者の募集フォームです。<br>
-      とりあえずHTMLざっくり組んでみました。<br>
+      デザイナー案にjqueryを混ぜ込んだ内容になっています。<br>
       デザインはまだ未定。</p>
     </div>
     <section id="mailform_participant_JP" action="" method="post" novalidate="">
