--- a/html/input-netlify/confirm-s.html
+++ b/html/input-netlify/confirm-s.html
@@ -14,7 +14,7 @@
   <div class="mf_lead">
     <h1>tomato 2020 参加応募フォーム</h1>
     <p>一般参加者の募集フォームです。<br>
-    とりあえずHTMLざっくり組んでみました。<br>
+    netlifyのformの確認です。<br>
     デザインはまだ未定。</p>
   </div>
   <form class="text text-h" name="contact-s" method="POST" action="/html/input-netlify/thank.html" netlify>
