--- a/html/input-netlify/confirm.html
+++ b/html/input-netlify/confirm.html
@@ -31,7 +31,7 @@
 </head>
 
 <body>
-  <form class="text text-h" name="contact" method="POST" action="/html/input-netlify/thank.html" netlify>
+  <form class="text text-h" name="contact" method="POST" action="/html/input-netlify/thank.html" data-netlify-recaptcha="true" netlify>
     <p>
       <label class="label">Your Name: </label>
       <input id="name" type="text" name="name" />
