--- a/html/input-netlify/confirm-s.html
+++ b/html/input-netlify/confirm-s.html
@@ -17,7 +17,7 @@
     netlifyのformの確認です。<br>
     デザインはまだ未定。</p>
   </div>
-  <form class="text text-h" name="contact-s" method="POST" action="/html/input-netlify/thank.html" netlify>
+  <form class="text text-h" name="contact-s" method="POST" data-netlify-recaptcha="true" action="/html/input-netlify/thank.html" netlify>
     <dl class="mailform">
       <dt>参加者氏名<span class="icon_must">必須</span></dt>
       <dd>
@@ -199,6 +199,9 @@
         </div>
       </dd>
     </dl>
+
+    <div data-netlify-recaptcha="true"></div>
+
     <div class="mf_confirm">
       <button id="button-confirm" type="submit" class="button_mfconfirm">確認画面へ</button>
     </div>
